--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,32 +1,32 @@
 header {
-  height: 1080px;
   width: 100;
   display: flex;
+  margin-bottom: 11vw;
 }
 
 .header-container {
-  margin-top: 182px;
-  height: 650px;
-  width: 1250px;
+  margin-top: 11vw;
+  height: 40vw;
+  width: 80vw;
   transform:rotate(-9.37deg);
   background-color: var(--light-color);
   display: flex;
   justify-content: space-between;
-  box-shadow: 80px 50px 0 0 var(--shadow-color);
+  box-shadow: 5vw 3vw 0 0 var(--shadow-color);
 
 }
 
 .logo {
   color: var(--text-color);
-  font-size: 120px;
+  font-size: 7vw;
   transform: rotate(9.37deg);
-  width: 500px;
-  margin: 100px;
+  width: 31vw;
+  margin: 6vw;
 }
 
 .overview {
   color: var(--background-color);
-  font-size: 70px;
-  width: 420px;
-  margin: 50px;
+  font-size: 4vw;
+  width: 26vw;
+  margin: 3vw;
 }
