--- a/src/components/footer/Palette.css
+++ b/src/components/footer/Palette.css
@@ -1,3 +1,19 @@
+@media (max-width: 500px) {
+  .color-box {
+    width: 75px;
+    height: 150px;
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 500px) {
+  .color-box {
+    width: 100px;
+    height: 200px;
+    font-size: 20px;
+  }
+}
+
 .analogous-colors-container {
   position: relative;
   display: flex;
@@ -6,11 +22,8 @@
 }
 
 .color-box {
-  width: 100px;
-  height: 200px;
   text-align: center;
   transition: transform 0.3s ease;
-  font-size: 25px;
   display: flex;
   align-items: center;
 }
