--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -1,7 +1,8 @@
 main {
   width: 100%;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 ::selection {
@@ -9,33 +10,27 @@ main {
   background-color: var(--shadow-color);
 }
 
-.main-left-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-  align-items: center;
-}
+
+
 
 .filter {
   display: flex;
-  flex-direction: column;
-  justify-content: end;
-  width: 200px;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-color);
+  border-radius: 50px;
+  margin-bottom: 11vh;
 }
 
-.filter-content {
-  background-color: var(--main-color);
-  border-radius: 50px 50px 0 0;
-  height: 800px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.filters-label {
+  font-size: 2vw;
+  margin: 0 50px;
 }
 
 .color-filter-container {
-  height: 300px;
   display: flex;
   flex-wrap: wrap;
+  margin-right: 50px;
 }
 
 .color-filter-container ul {
@@ -66,28 +61,6 @@ main {
 
 .color-pick:checked {
   opacity: 0.2;
-}
-
-.bottom-box-category {
-  background-color: var(--main-color);
-  display: flex;
-  justify-content: space-between;
-  width: 400px;
-  height: 100px;
-}
-
-.bgbox {
-  width: 100px;
-  height: 100px;
-  background-color: var(--background-color);
-}
-
-.bgbox:last-child {
-  border-radius: 0 0 0 50%;
-}
-
-.bgbox:first-child {
-  border-radius: 0 0 50% 0;
 }
 
 
@@ -153,30 +126,6 @@ main {
   align-items: start;
   justify-content: start;
   width: 990px;
-}
-
-
-
-
-.footer-box {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: end;
-}
-
-.right-section {
-  width: 45%;
-  height: 38px;
-  background-color: var(--main-color);
-  border-radius: 80px 0 0 0;
-}
-
-.left-section {
-  width: 45%;
-  height: 75px;
-  background-color: var(--main-color);
-  border-radius: 0 100px 0 0;
 }
 
 
