--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -71,7 +71,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  height: 930px;
+  min-height: 930px;
 }
 
 .page-container .pagination {
@@ -125,16 +125,42 @@ main {
   flex-wrap: wrap;
   align-items: start;
   justify-content: start;
-  width: 990px;
+  max-width: 990px;
 }
 
 
 
 
+@media (min-width: 1050px) {
+  .pagination-container {
+    width: 1050px;
+  }
+}
+
+@media (max-width: 820px) {
+  .pagination-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
+  .previous-button {
+    order: 1;
+  }
+
+  .next-button {
+    order: 2;
+  }
+
+  .page-color {
+    order: 3;
+  }
+}
+
 .pagination-container {
   display: flex;
   justify-content: space-between;
-  width: 1050px;
+  flex-wrap: wrap;
 }
 
 .previous-button {
